exporter/src/snapshots/exporter__book__test__parse_book-4.snap
---
source: src/book.rs
expression: result
---
title: Winnetou I
author:
  - Karl May
reader:
  - Gesine
  - Kim Reichert
  - Stefan Haubold
  - Stephan Gambke
  - Stephan Möbius
tracks:
  - title: winnetou1_01_may_64kb
    reader:
      - Gesine
    track: 1
    disc: ~
  - title: winnetou1_02_may_64kb
    reader:
      - Stefan Haubold
    track: 2
    disc: ~
  - title: winnetou1_03_may_64kb
    reader:
      - Stephan Möbius
    track: 3
    disc: ~
  - title: winnetou1_04_may_64kb
    reader:
      - Kim Reichert
    track: 4
    disc: ~
  - title: winnetou1_05_may_64kb
    reader:
      - Stephan Gambke
    track: 5
    disc: ~
total_tracks: 5
discs: ~
year: ~

