exporter/src/snapshots/exporter__book__test__parse_single_file-2.snap
---
source: src/book.rs
expression: book
---
title: The Adventures of Huckleberry Finn
author:
  - Mark Twain
reader:
  - Annie Coleman Rothenberg
tracks:
  - title: huckfinn_01_twain_apc_64kb
    reader:
      - Annie Coleman Rothenberg
    track: 1
    disc: ~
total_tracks: 1
discs: ~
year: ~

