exporter/src/snapshots/exporter__book__test__parse_single_file-3.snap
---
source: src/book.rs
expression: book
---
title: Penguin Island
author:
  - Anatole France
reader:
  - Michael Sirois
tracks:
  - title: penguin_island_01_france_64kb
    reader:
      - Michael Sirois
    track: 1
    disc: ~
total_tracks: 1
discs: ~
year: ~

