exporter/src/snapshots/exporter__book__test__parse_single_file-4.snap
---
source: src/book.rs
expression: book
---
title: winnetou1_01_may_64kb
author:
  - Karl May
reader:
  - Gesine
tracks:
  - title: winnetou1_01_may_64kb
    reader:
      - Gesine
    track: 1
    disc: ~
total_tracks: 1
discs: ~
year: ~

