exporter/src/snapshots/exporter__book__test__parse_single_file.snap
---
source: src/book.rs
expression: book
---
title: 02 - The Red-Headed League
author:
  - ""
reader:
  - Sir Arthur Conan Doyle
tracks:
  - title: 02 - The Red-Headed League
    reader:
      - Sir Arthur Conan Doyle
    track: 2
    disc: ~
total_tracks: 1
discs: ~
year: ~

